--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
     <meta name="keywords" content="@site.KeyWord">
     <meta name="description" content="@site.Description">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="~/css/c8-icon.css" rel="stylesheet" />
     <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
@@ -108,10 +109,10 @@
             </ul>
         </div>
         <div class="hdNav_cai_expand" style="display: none;">
-            <div class="hdNav_cai_title">
+            @*<div class="hdNav_cai_title">
                 <span>切换分类</span>
                 <span class="collect"><img src="/images/icon-collect.png" alt=""></span>
-            </div>
+            </div>*@
             <ul class="hdNav_cai">
                 
                 @foreach (LotteryType2 lotteryType in ViewBag.list)
