--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/paper.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/paper.css
@@ -531,6 +531,7 @@
     touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
     background: #fff;
+	overflow:hidden;
 }
 
 .slick-track {
@@ -555,9 +556,10 @@
 }
 
 .slick-slide img {
-    width: 90%;
+    /*width: 90%;*/
+	height:160px;
     margin: .1rem auto .4rem;
-    min-height: 2rem;
+   /* min-height: 2rem;*/
 }
 
 .bottomlistbtn {
@@ -705,6 +707,7 @@ body {
 .alllist {
     position: relative;
     margin-top: 50px;
+	overflow:hidden;
 }
 
 .alllist .upbtn {
@@ -888,7 +891,8 @@ body {
 }
 
 .odiv img {
-    width: 100%;
+    width: 80%;
+	margin:0 auto;
 }
 
 .oimg {
@@ -1036,13 +1040,9 @@ inav-warp {
     width: 50%;
     box-sizing: border-box;
     height: .4rem;
-    line-height: .4rem;
-    padding: 0 .1rem;
+    padding: .1rem 0 .1rem .1rem;
     border-bottom: 1px solid #eee;
     border-right: 1px solid #eee;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
 
 .rec-gallery dd:nth-child(2n+1) {
