--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -13,7 +13,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>开奖</title>
+    <title>彩票开奖查询_双色球开奖结果_3d开奖结果_大乐透开奖结果_排列五开奖结果_七星彩开奖结果_王中王铁算盘开奖结果_六开彩开奖现场直播_香港最快-万彩吧</title>
+    <meta name="keywords" content="彩票开奖查询_双色球开奖结果_3d开奖结果_大乐透开奖结果_排列五开奖结果_七星彩开奖结果_王中王铁算盘开奖结果_六开彩开奖现场直播_香港最快,万彩吧">
+    <meta name="description" content="万彩吧彩票开奖查询_双色球开奖结果_3d开奖结果_大乐透开奖结果_排列五开奖结果_七星彩开奖结果_王中王铁算盘开奖结果_六开彩开奖现场直播_香港最快">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
@@ -25,7 +27,7 @@
     </style>
 </head>
 
-<body>
+<body style="background:#f3f4f4;">
 
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
@@ -66,7 +68,7 @@
     </div>
 
 
-    <div class="hjc_indexmain" style="margin-top:106px;">
+    <div class="hjc_indexmain" style="margin-top:91px;">
         
         @foreach (LotteryType2 lotteryType in ViewBag.list)
         {
