--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -37,6 +37,7 @@
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">@(lottery.TypeName + "." + @newsType.TypeName)</a>
         @*<a href="javascript:showShare();" class="SX_A">分享</a>*@
+        <a href="javascript::" class="ZX_Sidebar"></a>
     </header>
 
     <section class="article">
@@ -311,6 +312,76 @@
                 <div style="clear:both;"></div>
             </ul>
             <a href="javascript:hideShare();" class="Del_Share">取消分享</a>
+        </div>
+    </div>
+
+    <!--侧边栏-->
+    <div class="ZX_CLBox">
+        <div class="CLB_YY"></div>
+        <div class="CLB_con">
+            <ul class="CLB_cNav">
+                <!--cNav_current-->
+                <li>
+                    <a href="/Home/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_1.png"></dt>
+                            <dd>
+                                <p>首页</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Home/Open">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_2.png"></dt>
+                            <dd>
+                                <p>开奖</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="JavaScript:;">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_3.png"></dt>
+                            <dd>
+                                <p>走势</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Home/Plan">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_4.png"></dt>
+                            <dd>
+                                <p>计划</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_5.png"></dt>
+                            <dd>
+                                <p>聊天</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 
