--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>登录</title>
+    <title>登录-万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <link href="~/css/dialog.css" rel="stylesheet" />
     <script src="~/js/jquery-1.8.3.min.js"></script>
