--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -51,9 +51,14 @@
                                     <i data-id="@comment.Id" data-ctype="1" data-commenttype="@comment.Type"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
 
                                 }
+                             
                                 @if (comment.StarCount > 0)
                                 {
                                     <span>@comment.StarCount</span>
+                                }
+                                else
+                                {
+                                    <span></span>
                                 }
                             </a>
                             <a href="/Comment/Index/@comment.Id?ctype=2&type=@ViewBag.Type" class="comp_HF"><img src="/images/46_3.png"></a>
