--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -1891,7 +1891,7 @@ a {
 
     .Per_If2Ul li {
         float: left;
-        width: 25%;
+        width: 20%;
         text-align: center;
         background: url(../images/38_1.png) no-repeat left center;
     }
@@ -5868,6 +5868,8 @@ a {
 
 .Plan_content {
     margin-top: 10px;
+	position:relative;
+	z-index:10000;
 }
 
 .Plan_CInfo {
@@ -6899,6 +6901,8 @@ a {
 .hdNav_cai {
     text-align: left;
     padding: 2% 0.4%;
+	max-height: 240px;
+    overflow-x: hidden;
 }
 
     .hdNav_cai li {
@@ -6938,7 +6942,7 @@ a {
 
 .hdNav_cai_lhs_expand {
     height: auto;
-    position: fixed;
+    position: absolute;
     right: 0;
 }
 
@@ -7687,7 +7691,7 @@ input[type=search]::-webkit-search-cancel-button:after {
 
 .LHC_info_YLZB_nav {
     position: relative;
-    top: 5px;
+    top: 0;
     margin-bottom: 4px;
     z-index: 999;
     background: #fff;
@@ -8597,7 +8601,7 @@ footer {
 
 
 	/*******我的卡券*******/
-.My_KaJuanBox{ margin:60px 10px 10px;}
+.My_KaJuanBox{ margin:101px 10px 51px;}
 .KaJuanInfo{margin-bottom:10px; background:#fff;box-shadow: 0px 0px 3px #c5c5c5;}
 .KJI_Top{ position:relative; padding:15px 0; border-bottom:1px dashed #fafafa;}
 .KJI_Ttu{ position:absolute; top:0; right:0; width:60px;}
@@ -8616,10 +8620,17 @@ footer {
 .KJI_Btu img{ display:block; width:100%;}
 .KJI_BtFont{ padding:0 9px; font-size:10px; color:#666;}
 
+.My_KJHeader{ position:fixed; top:50px; height:40px; background:#fff; width:100%; z-index:10001; border-bottom:1px solid #eee;}
+.My_KJHeader li{ float:left; width:33.3%; line-height:40px; text-align:center;}
+.My_KJHeader li a{ display:inline-block; font-size:14px; color:#333;}
+.My_KJHeader .current a{ height:38px; border-bottom:2px solid #f13131;}
+
+.KJ_YQ{ position:fixed; left:0; bottom:0; width:100%; height:40px; background:#fff; border-top:1px solid #eee; z-index:10001}
+.KJ_YQ a{ display:block; height:40px; line-height:40px; font-size:14px; text-align:center; color:#f13131;}
 
 	/*******首页 index*******/
 .JC_Left{ font-weight:normal; font-size:16px; color:#f13131;}
-.JC_More{ font-size:14px; color:#f13131;}
+.JC_More{ font-size:12px; color:#f13131;}
 
 
 	/*******资讯-双色球*******/
@@ -8630,15 +8641,32 @@ footer {
 
 
 
+	/*******资讯-详情 侧栏*******/
+.ZX_Sidebar{ position:absolute; top:0; right:0; width:50px; height:50px; background:url(../images/w5.png) no-repeat center; background-size:25px;}
 
-
-
-
-
-
-
-
-
+.ZX_CLBox{ position:relative; position:fixed; top:0; left:100%; width:100%; height:100%; z-index:10000;transition: all 0.75s;}
+.CLBox_current{ left:0;}
+.CLB_YY{ position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5);}
+.CLB_con{ position:absolute; top:0; right:0; width:55%; height:100%; background:#fff;}
+.CLB_cNav{ margin:60px 10px 10px; }
+.CLB_cNav li{opacity: 0; transform: translateX(50px); transition: all 0.4s;}
+.CLB_cNav li a{ display:block;}
+.cNav_current li{opacity: 1; transform: translateX(0);}
+.cNav_current li:nth-child(1){transition-delay: 0.50s;}
+.cNav_current li:nth-child(2){transition-delay: 0.65s;}
+.cNav_current li:nth-child(3){transition-delay: 0.80s;}
+.cNav_current li:nth-child(4){transition-delay: 0.95s;}
+.cNav_current li:nth-child(5){transition-delay: 1.10s;}
+.cNav_current li:nth-child(6){transition-delay: 1.25s;}
+.cNav_current li:nth-child(7){transition-delay: 1.40s;}
+.cNav_current li:nth-child(8){transition-delay: 1.55s;}
+.cNav_current li:nth-child(9){transition-delay: 1.70s;}
+.cNav_Dl{}
+.cNav_Dl dt{ float:left; width:30px; height:30px; margin-top:10px;}
+.cNav_Dl dt img{ display:block; width:100%; height:100%;}
+.cNav_Dl dd{ margin-left:40px; border-bottom:1px solid #eee; padding:10px 0;}
+.cNav_Dl dd p{ float:left; font-size:14px; color:#333; height:30px; line-height:30px;}
+.cNav_Dl dd img{ float:right; width:10px; margin-top:8px;}
 
 
 
