--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
@@ -36,7 +36,7 @@
                       console.log(data.data);
                       if (data.data.length == 0)
                       {
-                          $(".My_KaJuanK").html('<div class="mescroll-empty"><img class="empty-icon" src="/images/null.png"><p class="empty-tip">暂无优惠券~</p></div>');
+                          $(".My_KaJuanK").html('<div class="mescroll-empty"><img class="empty-icon" src="/images/null.png"><p class="empty-tip">暂无卡券~</p></div>');
                       } else
                       {
                           buildHtml(data.data, type);
